--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,143 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:background="#ffffff"
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="kr.me.ansr.login.LoginActivity">
 
     <FrameLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:id="@+id/FrameLayout1"
         android:layout_width="match_parent"
-        android:layout_height="150dp" >
+        android:layout_height="240dp" >
 
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/a_join_logo" />
     </FrameLayout>
 
-    <LinearLayout
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_email"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_gravity="center_horizontal" >
-
+        android:layout_gravity="center_horizontal">
         <EditText
+            android:background="@drawable/edit_text_underline2"
             android:id="@+id/login_editText1"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
             android:layout_weight="1"
-            android:ems="10"
-            android:hint="useremail@example.com"
+            android:hint="이메일"
+            android:textColorHint="#bcbbbd"
             android:inputType="textEmailAddress"
             android:lines="1"
             android:nextFocusDown="@+id/login_editText2"
-            android:textSize="16sp" />
-    </LinearLayout>
+            android:textSize="15sp" />
+    </android.support.design.widget.TextInputLayout>
 
-    <LinearLayout
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_pw"
+        android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginTop="13dp" >
-
+        android:layout_marginTop="13dp">
         <EditText
+            android:background="@drawable/edit_text_underline2"
             android:id="@+id/login_editText2"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
             android:fontFamily="nanum_bold"
-            android:hint="password"
+            android:hint="비밀번호"
+            android:textColorHint="#bcbbbd"
             android:imeOptions="actionSend"
             android:inputType="textPassword"
             android:lines="1"
             android:singleLine="true"
-            android:textSize="16sp" />
-    </LinearLayout>
+            android:textSize="15sp" />
+    </android.support.design.widget.TextInputLayout>
 
-    <LinearLayout
-        android:id="@+id/LinearLayout1"
+    <FrameLayout
+        android:layout_marginTop="36dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:orientation="vertical" >
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" >
-
-            <TextView
-                android:id="@+id/text_checkbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="13dp"
-                android:text="로그인 유지"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textSize="14sp" />
-
-            <CheckBox
-                android:id="@+id/checkBox1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" >
-
-            <TextView
-                android:id="@+id/text_checkbox2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="13dp"
-                android:text="save ID/PW"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textSize="14sp" />
-
-            <CheckBox
-                android:id="@+id/checkBox2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
+        android:layout_height="wrap_content">
         <Button
             android:id="@+id/btn_login"
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="100dp"
+            android:layout_width="232dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="13dp"
-            android:fontFamily="nanum_bold"
-            android:text="로그인" />
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/a_join_login_icon"
+            android:text="" />
+        <Button
+            android:id="@+id/btn_scroll"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="right"
+            android:background="@drawable/a_join_login_icon"
+            android:text="scroll" />
+    </FrameLayout>
 
-        <Button
-            android:id="@+id/btn_signup"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="13dp"
-            android:fontFamily="nanum_bold"
-            android:text="회원가입" />
-        <Button
-            android:id="@+id/btn_scrolling"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="13dp"
-            android:text="goto tests.." />
+    <LinearLayout
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/image_login_idfind"
+            android:src="@drawable/a_search_idfind"
+            android:layout_width="76dp"
+            android:layout_height="14dp" />
+        <LinearLayout
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="18dp"
+            android:layout_width="1dp"
+            android:layout_height="14dp"
+            android:background="#BBBDBF"
+            android:orientation="vertical">
+
+        </LinearLayout>
+        <ImageView
+            android:id="@+id/image_login_pwfind"
+            android:src="@drawable/a_search_pwfind"
+            android:layout_width="76dp"
+            android:layout_height="14dp" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="112dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="아직 회원이 아니신가요?"
+            android:textColor="#8F9193"
+            android:textSize="13sp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            />
+        <TextView
+            android:id="@+id/text_login_signup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:textColor="#77A7BB"
+            android:textSize="13sp"
+            android:text="회원가입"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>
+
 </LinearLayout>
