--- a/app/src/main/res/layout/activity_sign_up_account.xml
+++ b/app/src/main/res/layout/activity_sign_up_account.xml
@@ -15,8 +15,8 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:layout_height="@dimen/common_toolbar_size"
+            android:background="@drawable/a_join_titlebar"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
