--- a/app/src/main/res/layout/content_sign_up_account.xml
+++ b/app/src/main/res/layout/content_sign_up_account.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -15,9 +16,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:orientation="vertical">
 
         <android.support.design.widget.TextInputLayout
+            android:layout_marginTop="12dp"
             android:id="@+id/input_layout_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -26,34 +30,37 @@
                 android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_email" />
+                android:paddingLeft="10dp"
+                android:hint="@string/hint_email"
+                android:textSize="@dimen/sign_up_account_text_size"/>
 
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_pw"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp">
 
             <EditText
                 android:id="@+id/input_pw"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:textSize="@dimen/sign_up_account_text_size"
                 android:hint="@string/hint_pw" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_pw_confirm"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-
+            android:layout_height="wrap_content">
             <EditText
                 android:id="@+id/input_pw_confirm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:textSize="@dimen/sign_up_account_text_size"
                 android:hint="@string/hint_pw_confirm" />
         </android.support.design.widget.TextInputLayout>
         <TextView
@@ -64,13 +71,19 @@
             android:text="비밀번호가 일치합니다."
             android:textSize="14sp"
             android:textColor="@color/colorAccent"/>
-        <Button android:id="@+id/btn_enter"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="확인" />
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/btn_enter"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:layout_width="292dp"
+        android:layout_height="36dp"
+        android:background="@drawable/a_join_confirm_btn_selector"
+        android:text="" />
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="30dp"
