--- a/app/src/main/res/layout/content_signup_way.xml
+++ b/app/src/main/res/layout/content_signup_way.xml
@@ -4,39 +4,116 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_padding_zero"
+    android:paddingLeft="@dimen/activity_padding_zero"
+    android:paddingRight="@dimen/activity_padding_zero"
+    android:paddingTop="@dimen/activity_padding_zero"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="kr.me.ansr.login.SignupWayActivity"
     tools:showIn="@layout/activity_signup_way">
 
     <LinearLayout
+        android:layout_marginTop="@dimen/common_toolbar_size"
+        android:id="@+id/LinearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_vertical|center_horizontal">
+        android:layout_height="60dp"
+        android:orientation="vertical">
+        <FrameLayout
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="12dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_gravity="left|center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#595858"
+                android:text="이메일로 가입하기"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+            <ImageView
+                android:id="@+id/image_way_email"
+                android:layout_gravity="right|center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/common_next"/>
+        </FrameLayout>
 
-        <Button
-            android:id="@+id/btn_local"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:text="이메일로 가입하기" />
-
-        <Button
-            android:id="@+id/btn_facebook"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:text="페이스북으로 가입하기" />
-        <Button
-            android:id="@+id/btn_kakao"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:text="카카오톡으로 가입하기" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_below="@+id/LinearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#b7b6b6"
+        android:orientation="vertical">
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_below="@+id/LinearLayout1"
+        android:id="@+id/LinearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+        <FrameLayout
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="12dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_gravity="left|center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#595858"
+                android:text="페이스북으로 가입하기"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+            <ImageView
+                android:id="@+id/image_way_fb"
+                android:layout_gravity="right|center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/common_next"/>
+        </FrameLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_below="@+id/LinearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#b7b6b6"
+        android:orientation="vertical">
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_below="@+id/LinearLayout2"
+        android:id="@+id/LinearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+        <FrameLayout
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="12dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_gravity="left|center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#595858"
+                android:text="카카오톡으로 가입하기"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+            <ImageView
+                android:id="@+id/image_way_kakao"
+                android:layout_gravity="right|center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/common_next"/>
+        </FrameLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_below="@+id/LinearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#b7b6b6"
+        android:orientation="vertical">
+    </LinearLayout>
+
 
 </RelativeLayout>
