--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -5,26 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="kr.me.ansr.tab.board.BoardFragment">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:orientation="horizontal">
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button1"
-            android:layout_weight="1"
-            android:id="@+id/btn_board_child_one" />
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button2"
-            android:layout_weight="1"
-            android:id="@+id/btn_board_child_two" />
-    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,8 +21,10 @@
         <EditText
             android:id="@+id/board_editText1"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_weight="1"
+            android:background="@null"
+
             android:hint="검색어를 입력하세요.."
             android:inputType="text" />
 
