--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -14,8 +14,9 @@
         <EditText
             android:id="@+id/edit_friends_search"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_weight="1"
+            android:background="@null"
             android:hint="검색어를 입력하세요.."
             android:inputType="text" />
 
