--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,13 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
+        <!-- Active thumb color & Active track color(30% transparency) -->
+        <!--<item name="colorControlActivated">@color/colorPrimary</item>-->
+        <!-- Inactive thumb color -->
+        <!--<item name="colorSwitchThumbNormal">@color/grey300</item>-->
+        <!--&lt;!&ndash; Inactive track color(30% transparency) &ndash;&gt;-->
+        <!--<item name="android:colorForeground">@color/grey600</item>-->
+
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -14,7 +21,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
+        <!--<item name="android:layout_marginBottom">6dp</item>-->
+    </style>
+
+
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
@@ -23,4 +34,13 @@
         <item name="android:windowBackground">@drawable/dialog_background</item>
     </style>
 
+    <style name="Toolbar" parent="Base.Widget.AppCompat.Toolbar">
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="actionMenuTextColor">@android:color/white</item>
+        <item name="android:background">@android:color/holo_red_light</item>
+        <item name="android:height">40dp</item>
+        <!--<item name="actionOverflowButtonStyle">@style/ActionButtonOverflowStyle</item>-->
+        <!--<item name="drawerArrowStyle">@style/DrawerArrowStyle</item>-->
+    </style>
 </resources>
