--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -99,6 +99,7 @@
         <item>2007</item>
         <item>2008</item>
         <item>2009</item>
+        <item>학번(입학년도) 선택</item>
         <item>2010</item>
         <item>2011</item>
         <item>2012</item>
