--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -3,105 +3,201 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#ffffff"
     android:focusable="true"
     android:focusableInTouchMode="true">
 
     <include
-        layout="@layout/common_toolbar"
+        layout="@layout/common_toolbar_no_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/common_toolbar_size"/>
 
     <LinearLayout
+        android:layout_marginTop="34dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center_horizontal" >
 
-        <EditText
-            android:id="@+id/edit_signup_name"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:ems="10"
-            android:hint="이름"
-            android:lines="1"
-            android:textSize="16sp" />
-        <AutoCompleteTextView
-            android:id="@+id/auto_text_signup_univ"
-            android:hint="대학교 입력"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:completionThreshold="1"/>
-        <AutoCompleteTextView
-            android:id="@+id/auto_text_signup_dept"
-            android:hint="학과 입력"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:completionThreshold="1"/>
+            android:gravity="center_horizontal">
+            <TextView
+                android:layout_marginLeft="24dp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/dialogFontColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="*" />
+            <EditText
+                android:layout_gravity="center_horizontal"
+                android:paddingLeft="12dp"
+                android:id="@+id/edit_signup_name"
+                android:layout_width="312dp"
+                android:layout_height="36dp"
+                android:background="@drawable/a_join_input_1"
+                android:hint="이름"
+                android:textColorHint="@color/dialogHintColor"
+                android:textColor="@color/dialogFontColor"
+                android:lines="1"
+                android:textSize="16sp" />
+        </FrameLayout>
 
-        <Spinner
-            android:id="@+id/spinner"
-            android:spinnerMode="dropdown"
+        <FrameLayout
+            android:layout_marginTop="14dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-             />
+            android:gravity="center_horizontal">
+            <TextView
+                android:layout_marginLeft="24dp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/dialogFontColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="*" />
+            <TextView
+                android:gravity="center_vertical"
+                android:layout_gravity="center_horizontal"
+                android:paddingLeft="12dp"
+                android:background="@drawable/a_join_input_1"
+                android:textColorHint="@color/dialogHintColor"
+                android:textColor="@color/dialogFontColor"
+                android:textSize="16sp"
+                android:layout_width="312dp"
+                android:layout_height="36dp"
+                android:id="@+id/text_signup_univ"
+                android:hint="대학교 입력" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_marginTop="14dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal">
+            <TextView
+                android:layout_marginLeft="24dp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/dialogFontColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="*" />
+            <TextView
+                android:gravity="center_vertical"
+                android:layout_gravity="center_horizontal"
+                android:paddingLeft="12dp"
+                android:background="@drawable/a_join_input_1"
+                android:textColorHint="@color/dialogHintColor"
+                android:textColor="@color/dialogFontColor"
+                android:textSize="16sp"
+                android:layout_width="312dp"
+                android:layout_height="36dp"
+                android:id="@+id/text_signup_dept"
+                android:hint="학과 입력" />
+        </FrameLayout>
+        <!--<AutoCompleteTextView-->
+            <!--android:id="@+id/auto_text_signup_dept"-->
+            <!--android:hint="학과 입력"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="35dp"-->
+            <!--android:layout_marginRight="35dp"-->
+            <!--android:completionThreshold="1"/>-->
+        <FrameLayout
+            android:layout_marginTop="14dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal">
+            <TextView
+                android:layout_marginLeft="24dp"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/dialogFontColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="*" />
+            <Spinner
+                android:id="@+id/spinner"
+                android:spinnerMode="dropdown"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_horizontal"
+                android:paddingLeft="12dp"
+                android:background="@drawable/a_join_input_1"
+                android:textColorHint="@color/dialogHintColor"
+                android:textColor="@color/dialogHintColor"
+                android:textSize="16sp"
+                android:layout_width="312dp"
+                android:layout_height="36dp"
+                />
+        </FrameLayout>
+
     </LinearLayout>
 
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginTop="13dp"
         android:orientation="vertical" >
 
         <EditText
+            android:layout_marginTop="14dp"
+            android:paddingLeft="12dp"
             android:id="@+id/edit_signup_company"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:textColorHint="@color/dialogHintColor"
+            android:textColor="@color/dialogFontColor"
+            android:textSize="16sp"
+            android:layout_width="312dp"
+            android:layout_height="36dp"
             android:layout_weight="1"
-            android:ems="10"
             android:fontFamily="nanum_bold"
-            android:hint="회사명(직접입력)"
+            android:hint="회사명을 입력해주세요"
             android:inputType="textPersonName"
+            android:background="@drawable/a_join_input_1"
             android:lines="1"
             android:nextFocusDown="@+id/edit_signup_job"
             android:singleLine="true"
-            android:textSize="16sp" />
+             />
 
         <EditText
+            android:layout_marginTop="14dp"
+            android:paddingLeft="12dp"
+            android:background="@drawable/a_join_input_1"
             android:id="@+id/edit_signup_job"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
-            android:hint="직무(직접입력)"
+            android:hint="직무를 입력해주세요."
             android:inputType="textPersonName"
             android:lines="1"
             android:singleLine="true"
+            android:textColorHint="@color/dialogHintColor"
+            android:textColor="@color/dialogFontColor"
+            android:layout_width="312dp"
+            android:layout_height="36dp"
             android:textSize="16sp" />
+        <TextView
+            android:layout_marginTop="9dp"
+            android:layout_marginLeft="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/dialogFontColor"
+            android:textSize="13sp"
+            android:text="* 재학생일 경우 학생으로 입력해주세요."/>
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
+        android:layout_height="match_parent" >
         <Button
             android:id="@+id/btn_signup_send"
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="13dp"
-            android:text="회원가입" />
-    </LinearLayout>
+            android:layout_width="312dp"
+            android:layout_height="36dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/a_join_confirm_icon_2"
+            android:text=""
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
 
 
 </LinearLayout>
