--- a/app/src/main/res/layout/view_item_auto_complete.xml
+++ b/app/src/main/res/layout/view_item_auto_complete.xml
@@ -1,24 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="4">
-
+    android:layout_height="36dp"
+    android:background="@android:color/white"
+    android:layout_gravity="center"
+    android:gravity="center">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="univname"
-        android:layout_weight="4"
+        android:gravity="left"
+        android:textColor="@color/dialogFontColor"
         android:layout_marginLeft="20dp"
         android:id="@+id/text_univname" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="total"
-        android:layout_weight="0"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/dialogFontColor"
+        android:text="(total)"
+        android:id="@+id/text_total"
+        android:layout_marginLeft="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/text_univname"
+        android:layout_toEndOf="@+id/text_univname" />
+    <ImageView
         android:layout_marginRight="20dp"
-        android:id="@+id/text_total" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:src="@drawable/a_popup_search_school_choice"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+    </RelativeLayout>
 </LinearLayout>
