--- a/app/src/main/res/layout/common_toolbar.xml
+++ b/app/src/main/res/layout/common_toolbar.xml
@@ -4,16 +4,16 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#00ffff"
+    android:background="#ffffff"
     android:minHeight="@dimen/common_toolbar_size"
     app:popupTheme="@style/AppTheme.PopupOverlay"
-    app:titleTextColor="@android:color/white">
+    app:titleTextColor="#1b3043">
         <TextView
             android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="학교 사람들"
-            android:textColor="@android:color/white"
+            android:textColor="#1b3043"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_gravity="center"
             />
