--- a/app/src/main/res/layout/view_section_child.xml
+++ b/app/src/main/res/layout/view_section_child.xml
@@ -7,88 +7,102 @@
 
     <ImageView
         android:id="@+id/image_friends_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_margin="2dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginLeft="12dp"
         android:layout_gravity="center_vertical"
         android:src="@mipmap/ic_launcher" />
 
     <FrameLayout
+        android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical">
         <ImageView
             android:id="@+id/image_friends_add"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_gravity="center_vertical"
             android:visibility="gone"
-            android:src="@drawable/common_plus_signin_btn_icon_light_focused" />
+            android:src="@drawable/b_list_plusicon" />
         <TextView
             android:id="@+id/text_friends_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/list_name_color"
             android:text="유저명"
             android:visibility="visible"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </FrameLayout>
 
-
-    <EditText
-        android:id="@+id/hiddenEditText1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:visibility="invisible" />
-
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_vertical">
-        <TextView
-            android:id="@+id/text_friedns_stuid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="16"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        <TextView
-            android:id="@+id/text_friends_dept"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="컴퓨터 공학"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="25dp"
-
+        android:layout_marginLeft="20dp"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/text_friends_job"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="마케팅"
-            android:textSize="16sp"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-        <TextView
-            android:id="@+id/text_friends_distance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="11.1km"
-            android:textSize="12sp"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:orientation="horizontal"
+            android:layout_gravity="center_vertical">
+            <TextView
+                android:id="@+id/text_friedns_stuid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="16"
+                android:textSize="13sp"
+                android:textColor="@color/list_univ_color"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
+            <TextView
+                android:id="@+id/text_friends_dept"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="컴퓨터 공학"
+                android:layout_marginLeft="4dp"
+                android:textSize="13sp"
+                android:textColor="@color/list_univ_color"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_marginTop="4dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/text_friends_job"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:text="마케팅"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@color/list_job_color"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/text_friends_distance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginRight="12dp"
+                    android:text="11.1km"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@color/list_distance_color"
+                    android:textSize="11sp" />
+            </FrameLayout>
+        </LinearLayout>
     </LinearLayout>
-
-
 </LinearLayout>
