--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -30,15 +30,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#211c1d"
-                android:textSize="19sp"
+                android:textSize="15sp"
                 android:text="username"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
             <TextView
+                android:layout_marginTop="6dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="프로필 관리"
                 android:textColor="#a5a6a9"
-                android:textSize="14sp"
+                android:textSize="11sp"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
         <EditText
