--- a/app/src/main/res/layout/view_board_layout.xml
+++ b/app/src/main/res/layout/view_board_layout.xml
@@ -77,6 +77,7 @@
             android:layout_marginLeft="25dp"
             android:orientation="horizontal">
             <FrameLayout
+                android:id="@+id/frame_board_menu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <TextView
