--- a/app/src/main/res/values/string_terms.xml
+++ b/app/src/main/res/values/string_terms.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="term_private_info">제 1조칙
-㈜아는사람들 (이하 ‘회사’)은 원활하고 편리한 서비스 제공을 위해 최선의 노력을 하고 있습니다.
+    <string name="term_private_info">제 1조칙\n
+㈜아는사람들 (이하 ‘회사’)은 원활하고 편리한 서비스 제공을 위해 최선의 노력을 하고 있습니다.\n\n
 또한, 회사는 『정보통신망 이용촉진 및 정보보호 등에 관한 법률』및 관계 법령의 개인정보 보호 규정 등을 준수함으로써 고객의 개인정보 보호를 위해 조치를 취하고 있습니다.
 
 회사는 개인정보 취급방침을 서비스의 공식 홈페이지, 첫 화면에 공지함으로써 고객이 언제든 열람할 수 있도록 하고 있습니다. 본 이용 정책이 회사 방침에 의하여 변경될 수 있으며, 변경 시 공식 홈페이지를 통해 변경내용 및 개정일자 등 개정된 사항을 고객이 쉽게 알아볼 수 있도록 공지합니다.
