--- a/app/src/main/res/layout/content_board_detail.xml
+++ b/app/src/main/res/layout/content_board_detail.xml
@@ -25,7 +25,8 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/e__who_icon" />
+            android:src="@drawable/e__who_icon"
+            android:background="@drawable/z_rectangle"/>
 
         <LinearLayout
             android:layout_marginBottom="8dp"
@@ -109,10 +110,21 @@
         </LinearLayout>
     </LinearLayout>
     <!-- 상단 뷰-->
+    <ImageView
+        android:layout_below="@+id/linearLayout1"
+        android:layout_marginRight="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="220dp"
+        android:maxHeight="348dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/image_board_body"
+        android:src="@null"/>
 
     <LinearLayout
         android:id="@+id/layout_content"
-        android:layout_below="@+id/linearLayout1"
+        android:layout_below="@+id/image_board_body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
