--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -18,7 +18,8 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:id="@+id/image_my_thumb"
-            android:src="@drawable/e__who_icon"/>
+            android:src="@drawable/e__who_icon"
+            android:background="@drawable/z_rectangle"/>
         <LinearLayout
             android:layout_marginLeft="16dp"
             android:layout_width="wrap_content"
@@ -188,13 +189,13 @@
             </FrameLayout>
         </LinearLayout>
     </LinearLayout>
-    <ImageButton
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_weight="1"
-        android:layout_centerVertical="true"
-        android:layout_gravity="center_vertical"
-        android:background="@drawable/z_btn_white_selector"
-        android:src="@drawable/c__icon_3" />
+    <!--<ImageButton-->
+        <!--android:layout_width="64dp"-->
+        <!--android:layout_height="64dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:layout_gravity="center_vertical"-->
+        <!--android:background="@drawable/z_btn_white_selector"-->
+        <!--android:src="@drawable/c__icon_3" />-->
 
 </LinearLayout>
